--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,9 +20,11 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+    - name: Setup VS2019
+      # You may pin to the exact commit or the version.
+      # uses: richardo2016/Setup-MSBuild@51effcbf936905fd59a5f0626fc4583cd15727e1
+      uses: richardo2016/Setup-MSBuild@releases/clangcl_x_2017/v1
     - name: Restore dependencies
-    with:
-        dotnet-version: 6.0.x
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release
