--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,12 +20,10 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    - name: Setup VS2019
-      # You may pin to the exact commit or the version.
-      # uses: richardo2016/Setup-MSBuild@51effcbf936905fd59a5f0626fc4583cd15727e1
-      uses: richardo2016/Setup-MSBuild@releases/clangcl_x_2017/v1
-    - name: Restore dependencies
-      run: dotnet restore
+    - name: Setup NuGet.exe for use with actions
+      uses: NuGet/setup-nuget@v1.1.1
+    - name: restore-nuget-packages
+      uses: IT-Service/restore-nuget-packages@v1
     - name: Build
       run: dotnet build --configuration Release
     - name: Test
