--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,8 +29,8 @@ jobs:
    
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
-      with:
-        vs-version: '[16.8,16.9]'
+#       with:
+#         vs-version: '[16.8,16.9]'
     
     - name: Setup NuGet.exe for use with actions
       uses: NuGet/setup-nuget@v1.1.1
