--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,6 +18,7 @@ jobs:
       Configuration: Release
       SolutionPath: PartsUnlimited.sln
       UnitTestsPath: test/PartsUnlimited.UnitTests/PartsUnlimited.UnitTests.csproj
+      PackagePath: /BuildPackage
 
     steps:
     - uses: actions/checkout@v3
@@ -44,10 +45,10 @@ jobs:
         DeployExtension: False
     
     - name: Unit Test
-      run: dotnet test $env:UnitTestsPath --no-build --verbosity normal
+      run: dotnet test $env:UnitTestsPath --no-build
     
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.1
       with:
        name: WebApp
-       path: TestResults
+       path: $env:PackagePath
