--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
       Configuration: Release
       SolutionPath: PartsUnlimited.sln
       UnitTestsPath: test/PartsUnlimited.UnitTests/PartsUnlimited.UnitTests.csproj
-      PackagePath: /BuildPackage
+      BuildPath: src/PartsUnlimitedWebsite/bin
 
     steps:
     - uses: actions/checkout@v3
@@ -51,4 +51,4 @@ jobs:
       uses: actions/upload-artifact@v3.1.1
       with:
        name: WebApp
-       path: $env:PackagePath
+       path: $env:BuildPath
