--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,7 +45,7 @@ jobs:
         DeployExtension: False
     
     - name: Unit Test
-      run: dotnet test $env:UnitTestsPath --no-build
+      run: dotnet test --no-build --verbosity normal $env:SolutionPath
     
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.1
