--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,8 +44,8 @@ jobs:
       env: 
         DeployExtension: False
     
-    - name: Unit Test
-      run: dotnet test --no-build --verbosity normal $env:SolutionPath
+#     - name: Unit Test
+#       run: dotnet test --no-build --verbosity normal $env:SolutionPath
     
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.1
