--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -48,7 +48,7 @@ jobs:
 #       run: dotnet test --no-build --verbosity normal $env:SolutionPath
     
     - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.1
+      uses: actions/upload-artifact@v3
       with:
-       name: WebApp
-       path: $env:BuildPath
+       name: my-artifact
+       path: src/PartsUnlimitedWebsite/bin/
