--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,4 +51,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
        name: my-artifact
-       path: src/PartsUnlimitedWebsite/bin/
+       path: $env:BuildPath
