--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,6 @@ jobs:
       Configuration: Release
       SolutionPath: PartsUnlimited.sln
       UnitTestsPath: test/PartsUnlimited.UnitTests/PartsUnlimited.UnitTests.csproj
-      BuildPath: src/PartsUnlimitedWebsite/bin/
 
     steps:
     - uses: actions/checkout@v3
@@ -51,4 +50,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
        name: my-artifact
-       path: $env:BuildPath
+       path: src/PartsUnlimitedWebsite/bin/
