--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,7 @@ jobs:
       VersionSuffix: 'pr-${{github.event.number}}.${{ github.run_number }}'
       Configuration: Release
       SolutionPath: PartsUnlimited.sln
-      UnitTestsPath: test/PartsUnlimited.UnitTests/PartsUnlimited.UnitTests.csproj
+      UnitTestsPath: test/PartsUnlimited.UnitTests/*.csproj
 
     steps:
     - uses: actions/checkout@v3
@@ -43,8 +43,8 @@ jobs:
       env: 
         DeployExtension: False
     
-#     - name: Unit Test
-#       run: dotnet test --no-build --verbosity normal $env:SolutionPath
+    - name: Unit Test
+      run: dotnet test --verbosity normal $env:UnitTestsPath
     
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
