--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,7 +44,7 @@ jobs:
         DeployExtension: False
     
     - name: Unit Test
-      run: dotnet test --logger:"console;verbosity=normal" $env:UnitTestsPath
+      run: dotnet test --verbosity detailed $env:UnitTestsPath
     
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
