update terraform CD

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -54,7 +54,7 @@ jobs:
        path: src/PartsUnlimitedWebsite/bin/
 
   terraform:
-    name: "Terraform"
+    name: "Terraform CD"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
